force-app/main/default/objects/Clause__c/fields/Clause_Number__c.field-meta.xml
<CustomField>
    <fullName>Clause_Number__c</fullName>
    <label>Clause Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>