force-app/main/default/objects/Clause__c/fields/Clause_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Clause_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Clause Unique Id</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>