force-app/main/default/objects/Clause__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <label>Framework</label>
    <referenceTo>Framework__c</referenceTo>
    <relationshipLabel>Clauses</relationshipLabel>
    <relationshipName>Clauses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>